css/stylesheet.css
* {
	padding: 0;
    margin: 0;
}

html, body{
    height: 100%;
}

.navigation {
    font-family: "Advent Pro";
    font-size: 30px; 
	position: fixed;
    left: 0;
    right: 0;
    margin: 10;
    background-color: #222333;
    z-index: 2;
}

.navigation ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    display: inline;
}

.navigation .left li {
    float: left;
}

.navigation .right li {
    float: right;
}

.navigation div, a{
    display: block;
    color: white;
    text-align: center;
    padding: 20px 30px;
    text-decoration: none;
}

/* Change the link color to #111 (black) on hover */
li a:hover {
    background-color: #111;
}

#titleContainer {
    padding-top: 90px;
    text-align: center;
    opacity: 0.4;
}

.titleCanvas {
    border: 5px solid blue;
    width: 100%
    /*margin: auto;*/
}

#content {
    display: block;
}

.pageSection {
    height: 100%;
    position: relative;
}

.topWall {
    position: absolute;
    width: 100%;
    height: 50px;
    background-color: white;
}

#mountain {
    background-image: url("../img/yosemite.jpg");
    background-repeat: no-repeat;
    background-size: 100% auto;
    background-position-x: center;
    text-align: center;
}

#archive {
    background-color: snow;
    color: white;
    font-family: "Open Sans";
    font-size: 30px;
}

#archive table, #archive th, #archive td {
    border: none;
    border-collapse: collapse;
}

#archive table {
    table-layout: fixed;
    height: 100%;
    width: 100%;
    margin: 0;
}

#archive td {
    background-color: #a3c6ff;
}

#archive th {
    height: 20%;
    background-color: #ffaaaa;
}

#archive .thick {
    margin-top: 50px;
    text-align: center;
}

.project {
    height: 100%;
    width: 100%;
    z-index: 1;
    position: relative;
}

.project img{
    margin: 30px;
    height: 40%;
    width: 40%;
    float: left;
}

.project h1 {
    text-align: center;
    margin: 20px;
}

.project p {
    font-family: "Advent Pro";
}


#contact {
    background-image: url("../img/zhang.jpg");
    background-repeat: no-repeat;
    background-size: 100% 100vh;
    background-position-x: center;
}

#about {
    background-color: snow;
}

#about p {
    color: black;
    position: absolute;
    top: 300px;
    left: 0;
    right: 0;
    font-family: "Open Sans";
    font-size: 128px;
    font-weight: bold;
}

#blog {
    background-image: url("../img/arctic.jpg");
    background-repeat: no-repeat;
    background-size: 100% 100vh;
    background-position-x: center;
}

p{
    text-align:center;
}

.scroll{
    font-family: "Advent Pro";
    font-size: 30px;
    vertical-align: middle;
    position: absolute;
    bottom: 40px;
    left: 0; 
    right: 0; 
    margin-left: auto; 
    margin-right: auto; 
    width: 200px;/
    border-radius: 100px;
}

.scroll:hover{
    background: rgba(100, 100, 100, .3);
}

.inner {
    margin: 0 auto;
    padding: 80px;
    position: relative;
    font-family: "Open Sans";
    /*color: white;*/
    top: 300px;
    text-align: center;
}

.inner h1 {
    font-size: 96px;
}

.inner p {
    font-size: 48px;
}

#myName {
    /*vertical-align: middle;*/
    width: 50%;
    background: rgba(255, 255, 255, .3);
}

#myResume {
    width: 30%;
    color: white;
    background: rgba(0, 0, 0, .7);
}

.dot {
    position: absolute;
    background-color: white;
    width: 10px;
    height: 10px;
    opacity: 0;
}

#myResume > .dot:nth-child(1), #myResume > .dot:nth-child(2) {
    left: 50px;
    top: 50px;
}

#myResume > .dot:nth-child(3), #myResume > .dot:nth-child(4) {
    right: 50px;
    bottom: 50px;
}

.rainbow {
    background-image: -webkit-gradient( linear, left top, right top, color-stop(0, #f22), color-stop(0.15, #f2f), color-stop(0.3, #22f), color-stop(0.45, #2ff), color-stop(0.6, #2f2),color-stop(0.75, #2f2), color-stop(0.9, #ff2), color-stop(1, #f22) );
    background-image: gradient( linear, left top, right top, color-stop(0, #f22), color-stop(0.15, #f2f), color-stop(0.3, #22f), color-stop(0.45, #2ff), color-stop(0.6, #2f2),color-stop(0.75, #2f2), color-stop(0.9, #ff2), color-stop(1, #f22) );
    color:transparent !important;
    -webkit-background-clip: text;
    background-clip: text;
}

.circle {
    width: 300px;
    height: 300px;
    position: absolute;
    border-radius: 50%;
}

#github {
    left: 100px;
    top: 100px;
    background-image: url("../img/github.png");
    background-repeat: no-repeat;
    background-size: 100% 100%;
    background-position: center;
}

#facebook {
    right: 100px;
    top: 100px;
    background-image: url("../img/facebook.png");
    background-repeat: no-repeat;
    background-size: 100% 100%;
    background-position: center;
}

#gmail {
    left: 100px;
    bottom: 100px;
    background-image: url("../img/google.png");
    background-repeat: no-repeat;
    background-size: 100% 100%;
    background-position: center;
}

#linkedin {
    right: 100px;;
    bottom: 100px;
    background-image: url("../img/linkedin.png");
    background-repeat: no-repeat;
    background-size: 100% 100%;
    background-position: center;
}

